[package]
description = "Parser and serializer for STUN messages"
license = "MIT"
homepage = "https://github.com/nbuckles13/stun-message"
repository = "https://github.com/nbuckles13/stun-message.git"
name = "stun-message"
version = "0.1.0"
authors = ["Nathan Buckles <nbuckles@gmail.com>"]
categories = ["network-programming", "parser-implementations"]
readme ="README.md"
edition = "2018"

include = [
  "LICENSE",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
]

[dependencies]
num_enum = "0.5.1"
nom = "5.0"
cookie-factory = "0.3.1"
